[tool.poetry]
name = "grammar-tag"
version = "0.1.0"
description = "Correct grammatical and spelling errors in Ukrainian texts."
authors = ["Oleh Neichev <oleg.neichev@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "gec_ua"}]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pymorphy3-dicts-uk = "^2.4.1.1.1663094765"
pymorphy3 = "^1.2.1"
pandas = "^2.1.3"
ua-gec = "^2.0.0"
transformers = "^4.35.2"
matplotlib = "^3.8.2"
datasets = "^2.15.0"
torch = "^2.1.1"
gradio = "^4.5.0"
evaluate = "^0.4.1"
stanza = "1.4.2"
editdistpy = "^0.1.3"
symspellpy = "^6.7.7"
spylls = "^0.1.7"
jamspell = "^0.0.12"
seqeval = "^1.2.2"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
